--- a/9_video_classification_eco/9-4_1_kinetics_download_for_python2.ipynb
+++ b/9_video_classification_eco/9-4_1_kinetics_download_for_python2.ipynb
@@ -49,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python2で動かなかったので、python3にて動くように修正する。仮想環境は変えなくてよい。\n",
+    "ちなみに、引数ありでデバッグする場合の設定は下記を参照する\n",
+    "https://qiita.com/junjis0203/items/529611662127f59b1bf7\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -57,14 +66,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/kinetics/61598a2a-008c-4be8-b905-675577ef7975.%(ext)s\n",
-      "/tmp/kinetics/dda1d025-c5a0-4eaa-a1fa-7741e7b974c2.%(ext)s\n",
-      "/tmp/kinetics/aee74f62-b200-4464-84c0-977f56b48830.%(ext)s\n",
-      "/tmp/kinetics/9aa81f6a-b58c-4eae-8a28-b8a8e0f56f6d.%(ext)s\n",
-      "/tmp/kinetics/1ea6c6cc-0253-4976-a51d-4812e2a61e44.%(ext)s\n",
-      "/tmp/kinetics/9f855b52-7a6f-4781-a53f-a21e7ebbf938.%(ext)s\n",
-      "/tmp/kinetics/bfca0f36-1499-4391-bb63-9f2c84a72d41.%(ext)s\n",
-      "/tmp/kinetics/2c94b95d-14f4-410b-b60c-28834d2a7439.%(ext)s\n"
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=b6yQZjPE26c\n",
+      "[youtube] b6yQZjPE26c: Downloading webpage\n",
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=zkXOcxGnUhs\n",
+      "[youtube] zkXOcxGnUhs: Downloading webpage\n",
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=dAeUFSdYG1I\n",
+      "[youtube] dAeUFSdYG1I: Downloading webpage\n",
+      "[youtube] b6yQZjPE26c: Downloading ios player API JSON\n",
+      "[youtube] b6yQZjPE26c: Downloading mweb player API JSON\n",
+      "\u001b[0;31mERROR:\u001b[0m [youtube] b6yQZjPE26c: Private video. Sign in if you've been granted access to this video\n",
+      "Process LokyProcess-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1626, in wrapper\n",
+      "    return func(self, *args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1761, in __extract_info\n",
+      "    ie_result = ie.extract(url)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/extractor/common.py\", line 741, in extract\n",
+      "    ie_result = self._real_extract(url)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/extractor/youtube.py\", line 4468, in _real_extract\n",
+      "    self.raise_no_formats(reason, expected=True)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/extractor/common.py\", line 1275, in raise_no_formats\n",
+      "    raise ExtractorError(msg, expected=expected, video_id=video_id)\n",
+      "yt_dlp.utils.ExtractorError: [youtube] b6yQZjPE26c: Private video. Sign in if you've been granted access to this video\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py\", line 463, in _process_worker\n",
+      "    r = call_item()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py\", line 291, in __call__\n",
+      "    return self.fn(*self.args, **self.kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 598, in __call__\n",
+      "    return [func(*args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 598, in <listcomp>\n",
+      "    return [func(*args, **kwargs)\n",
+      "  File \"/workspace/pytorch_advanced/9_video_classification_eco/./video_download/download copy.py\", line 151, in download_clip_wrapper\n",
+      "    downloaded, log = download_clip(row['video-id'], output_filename,\n",
+      "  File \"/workspace/pytorch_advanced/9_video_classification_eco/./video_download/download copy.py\", line 111, in download_clip\n",
+      "    ydl.download([(url_base + video_identifier)])\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 3609, in download\n",
+      "    self.__download_wrapper(self.extract_info)(\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 3582, in wrapper\n",
+      "    res = func(*args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1615, in extract_info\n",
+      "    return self.__extract_info(url, self.get_info_extractor(key), download, extra_info, process)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1644, in wrapper\n",
+      "    self.report_error(str(e), e.format_traceback())\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1092, in report_error\n",
+      "    self.trouble(f'{self._format_err(\"ERROR:\", self.Styles.ERROR)} {message}', *args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/yt_dlp/YoutubeDL.py\", line 1031, in trouble\n",
+      "    raise DownloadError(message, exc_info)\n",
+      "yt_dlp.utils.DownloadError: \u001b[0;31mERROR:\u001b[0m [youtube] b6yQZjPE26c: Private video. Sign in if you've been granted access to this video\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/conda/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py\", line 466, in _process_worker\n",
+      "    result_queue.put(_ResultItem(call_item.work_id, exception=exc))\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/backend/queues.py\", line 230, in put\n",
+      "    obj = dumps(obj, reducers=self._reducers)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/backend/reduction.py\", line 215, in dumps\n",
+      "    dump(obj, buf, reducers=reducers, protocol=protocol)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/loky/backend/reduction.py\", line 208, in dump\n",
+      "    _LokyPickler(file, reducers=reducers, protocol=protocol).dump(obj)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/externals/cloudpickle/cloudpickle.py\", line 1245, in dump\n",
+      "    return super().dump(obj)\n",
+      "TypeError: cannot pickle 'traceback' object\n",
+      "[youtube] dAeUFSdYG1I: Downloading ios player API JSON\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/workspace/pytorch_advanced/9_video_classification_eco/./video_download/download copy.py\", line 243, in <module>\n",
+      "    main(**vars(p.parse_args()))\n",
+      "  File \"/workspace/pytorch_advanced/9_video_classification_eco/./video_download/download copy.py\", line 212, in main\n",
+      "    status_lst = Parallel(n_jobs=num_jobs)(delayed(download_clip_wrapper)(\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 2007, in __call__\n",
+      "    return output if self.return_generator else list(output)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 1650, in _get_outputs\n",
+      "    yield from self._retrieve()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 1754, in _retrieve\n",
+      "    self._raise_error_fast()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 1789, in _raise_error_fast\n",
+      "    error_job.get_result(self.timeout)\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 745, in get_result\n",
+      "    return self._return_or_raise()\n",
+      "  File \"/opt/conda/lib/python3.10/site-packages/joblib/parallel.py\", line 763, in _return_or_raise\n",
+      "    raise self._result\n",
+      "joblib.externals.loky.process_executor.TerminatedWorkerError: A worker process managed by the executor was unexpectedly terminated. This could be caused by a segmentation fault while calling the function or by an excessive memory usage causing the Operating System to kill the worker.\n",
+      "\n",
+      "The exit codes of the workers are {EXIT(1)}\n"
      ]
     }
    ],
@@ -81,11 +173,12 @@
     "if not os.path.exists(data_dir):\n",
     "    os.mkdir(data_dir)\n",
     "    \n",
-    "    \n",
+    "# https://note.com/mamoo965/n/n2ad01afc9e03\n",
+    "# !!!!いくつかの動画はprivateファイルになっていてダウンロードできない!!!!\n",
     "# フォルダ「video_download」のpytnonファイル「download.py」を実行します\n",
     "# 取得するyoutubeデータはフォルダ「video_download」のkinetics-400_val_8videos.csvに記載した8動画です\n",
     "# 保存先はフォルダ「data」内のフォルダ「kinetics_videos」です\n",
-    "!python2 ./video_download/download.py ./video_download/kinetics-400_val_8videos.csv ./data/kinetics_videos/\n",
+    "!python3 \"./video_download/download copy.py\" ./video_download/kinetics-400_val_8videos.csv ./data/kinetics_videos/\n",
     "    "
    ]
   },
@@ -99,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
