--- a/8_nlp_sentiment_bert/make_folders_and_data_downloads.ipynb
+++ b/8_nlp_sentiment_bert/make_folders_and_data_downloads.ipynb
@@ -68,7 +68,7 @@
      "data": {
       "text/plain": [
        "('./vocab/bert-base-uncased-vocab.txt',\n",
-       " <http.client.HTTPMessage at 0x7fc9ed54d780>)"
+       " <http.client.HTTPMessage at 0x7fc219372b30>)"
       ]
      },
      "execution_count": 5,
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
