--- a/9_video_classification_eco/9-4_3_ECO_DataLoader.ipynb
+++ b/9_video_classification_eco/9-4_3_ECO_DataLoader.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./data/kinetics_videos/arm wrestling/C4lCVBZ3ux0_000028_000038\n",
-      "./data/kinetics_videos/arm wrestling/ehLnj7pXnYE_000027_000037\n"
+      "./data/kinetics_videos/arm wrestling/BdMiTo_OtnU_000024_000034\n",
+      "./data/kinetics_videos/arm wrestling/C4lCVBZ3ux0_000028_000038\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        " 'zumba': 399}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
       "torch.Size([16, 3, 224, 224])\n",
       "arm wrestling\n",
       "6\n",
-      "./data/kinetics_videos/arm wrestling/C4lCVBZ3ux0_000028_000038\n"
+      "./data/kinetics_videos/arm wrestling/BdMiTo_OtnU_000024_000034\n"
      ]
     }
    ],
@@ -825,14 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([8, 16, 3, 224, 224])\n"
+      "torch.Size([4, 16, 3, 224, 224])\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -873,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
