--- a/1_image_classification/1-5_fine_tuning.ipynb
+++ b/1_image_classification/1-5_fine_tuning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +46,15 @@
     "import torch.optim as optim\n",
     "\n",
     "from torchvision import models\n",
-    "\n",
+    "from PIL import Image\n",
+    "import json\n",
+    "from torchvision import models, transforms\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +292,7 @@
     "    # 初期設定\n",
     "    # GPUが使えるかを確認\n",
     "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    #device = torch.device(\"cpu\")\n",
     "    print(\"使用デバイス：\", device)\n",
     "\n",
     "    # ネットワークをGPUへ\n",
@@ -354,14 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "使用デバイス： cuda:0\n",
+      "使用デバイス： cuda:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 1/2\n",
       "-------------\n"
      ]
@@ -370,7 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████| 5/5 [00:09<00:00,  1.99s/it]\n"
+      "100%|██████████| 5/5 [00:02<00:00,  2.21it/s]\n"
      ]
     },
     {
@@ -386,7 +395,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████| 8/8 [00:11<00:00,  1.47s/it]\n"
+      "100%|██████████| 8/8 [00:05<00:00,  1.54it/s]\n"
      ]
     },
     {
@@ -400,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████| 5/5 [00:02<00:00,  2.49it/s]"
+      "100%|██████████| 5/5 [00:02<00:00,  2.30it/s]"
      ]
     },
     {
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,29 +453,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_46426/3860136989.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  load_weights = torch.load(load_path)\n",
+      "/tmp/ipykernel_46426/3860136989.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  load_weights = torch.load(load_path, map_location={'cuda:0': 'cpu'})\n"
+     ]
     }
    ],
    "source": [
     "# PyTorchのネットワークパラメータのロード\n",
     "load_path = './weights_fine_tuning.pth'\n",
     "load_weights = torch.load(load_path)\n",
-    "net.load_state_dict(load_weights)\n",
+    "#net.load_state_dict(load_weights)\n",
     "\n",
     "# GPU上で保存された重みをCPU上でロードする場合\n",
     "load_weights = torch.load(load_path, map_location={'cuda:0': 'cpu'})\n",
-    "net.load_state_dict(load_weights)\n"
+    "net.load_state_dict(load_weights)\n",
+    "# 学習時にcudaにnetを送っているので、cpuで推論するときにはcpuに送る\n",
+    "net = net.to(torch.device('cpu'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 出力結果からラベルを予測する後処理クラス\n",
+    "class ILSVRCPredictor():\n",
+    "    \"\"\"\n",
+    "    ILSVRCデータに対するモデルの出力からラベルを求める。\n",
+    "\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    class_index : dictionary\n",
+    "            クラスindexとラベル名を対応させた辞書型変数。\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, class_index):\n",
+    "        self.class_index = class_index\n",
+    "\n",
+    "    def predict_max(self, out):\n",
+    "        \"\"\"\n",
+    "        確率最大のILSVRCのラベル名を取得する。\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        out : torch.Size([1, 1000])\n",
+    "            Netからの出力。\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        predicted_label_name : str\n",
+    "            最も予測確率が高いラベルの名前\n",
+    "        \"\"\"\n",
+    "        maxid = np.argmax(out.detach().numpy())\n",
+    "        predicted_label_name = self.class_index[str(maxid)][1]\n",
+    "\n",
+    "        return predicted_label_name"
    ]
   },
   {
@@ -474,6 +525,82 @@
    "metadata": {},
    "source": [
     "以上"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 入力画像の前処理のクラス\n",
+    "class BaseTransform():\n",
+    "    \"\"\"\n",
+    "    画像のサイズをリサイズし、色を標準化する。\n",
+    "\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    resize : int\n",
+    "        リサイズ先の画像の大きさ。\n",
+    "    mean : (R, G, B)\n",
+    "        各色チャネルの平均値。\n",
+    "    std : (R, G, B)\n",
+    "        各色チャネルの標準偏差。\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, resize, mean, std):\n",
+    "        self.base_transform = transforms.Compose([\n",
+    "            transforms.Resize(resize),  # 短い辺の長さがresizeの大きさになる\n",
+    "            transforms.CenterCrop(resize),  # 画像中央をresize × resizeで切り取り\n",
+    "            transforms.ToTensor(),  # Torchテンソルに変換\n",
+    "            transforms.Normalize(mean, std)  # 色情報の標準化\n",
+    "        ])\n",
+    "\n",
+    "    def __call__(self, img):\n",
+    "        return self.base_transform(img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "入力画像の予測結果： ants\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"./data/hymenoptera_data/train/ants/1030023514_aad5c608f9.jpg\"\n",
+    "#image_path = \"./data/hymenoptera_data/train/bees/16838648_415acd9e3f.jpg\"\n",
+    "image_file_path = image_path\n",
+    "# 入力画像を読み込む\n",
+    "img = Image.open(image_file_path)  # [高さ][幅][色RGB]\n",
+    "\n",
+    "# ILSVRCのラベル情報をロードし辞意書型変数を生成します\n",
+    "ILSVRC_class_index = json.load(open('./data/imagenet_class_index_.json', 'r'))\n",
+    "\n",
+    "# ILSVRCPredictorのインスタンスを生成します\n",
+    "predictor = ILSVRCPredictor(ILSVRC_class_index)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 前処理の後、バッチサイズの次元を追加する\n",
+    "resize = 224\n",
+    "transform = BaseTransform(resize, mean, std)  # 前処理クラス作成\n",
+    "img_transformed = transform(img)  # torch.Size([3, 224, 224])\n",
+    "inputs = img_transformed.unsqueeze_(0)  # torch.Size([1, 3, 224, 224])\n",
+    "#inputs = img_transformed # torch.Size([1, 3, 224, 224])\n",
+    "\n",
+    "# モデルに入力し、モデル出力をラベルに変換する\n",
+    "out = net(inputs)  # torch.Size([1, 1000])\n",
+    "result = predictor.predict_max(out)\n",
+    "\n",
+    "# 予測結果を出力する\n",
+    "print(\"入力画像の予測結果：\", result)"
    ]
   },
   {
@@ -486,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
